--- a/admin/package.json
+++ b/admin/package.json
@@ -15,10 +15,12 @@
     "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.2.0",
     "@intervolga/optimize-cssnano-plugin": "^1.0.6",
+    "@mdi/font": "^4.4.95",
     "babel-loader": "^8.0.4",
     "babel-preset-env": "^1.7.0",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^2.0.1",
+    "deepmerge": "^4.0.0",
     "eslint": "^5.10.0",
     "eslint-config-google": "^0.11.0",
     "eslint-config-prettier": "^3.3.0",
@@ -26,6 +28,8 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^3.0.0",
     "expose-loader": "^0.7.5",
+    "fibers": "^4.0.1",
+    "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^1.3.0",
     "lint-staged": "^8.1.0",
@@ -34,7 +38,11 @@
     "prettier": "^1.15.3",
     "raw-loader": "^1.0.0",
     "rimraf": "^2.6.2",
+    "sass": "^1.22.12",
+    "sass-loader": "^8.0.0",
+    "semantic-ui": "^2.4.2",
     "uglifyjs-webpack-plugin": "^2.0.1",
+    "url-loader": "^2.1.0",
     "vue-loader": "~15.6",
     "vue-style-loader": "~4.1",
     "vue-template-compiler": "~2.6",
@@ -46,6 +54,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-vue": "^0.8.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.6"
   },
