--- a/admin/package.json
+++ b/admin/package.json
@@ -57,7 +57,8 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-vue": "^0.8.1",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1"
   },
   "lint-staged": {
     "*.js": [
